fixed weird overlapping text, inputs are not snapped to bottom of QuestionCard anymore :(

--- a/ui/src/components/Inputs/ButtonList/Button.scss
+++ b/ui/src/components/Inputs/ButtonList/Button.scss
@@ -5,7 +5,7 @@
   color: #333;
   background: $light-orange;
   padding: 8px 18px;
-  margin: 8px;
+  margin: 0px 8px;
   border-radius: 10px;
 }
 
