--- a/ui/src/components/Inputs/ButtonList/ButtonList.scss
+++ b/ui/src/components/Inputs/ButtonList/ButtonList.scss
@@ -2,6 +2,5 @@
 
 .button-list {
   background: $dark-charcoal;
-  margin: 15px auto;
   border-radius: 2px;
 }
